--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 <br />
 <p> Yes! Fantastisk nyheit!</p>
 
+  <style>
+body {
+  background-image: url('honda.jpg');
+}
+</style>
+    
 <img class="logo" src="icons/logo.png">
 
 <head>
