--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <html>
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+<style>
+  body {
+background-image: url(Pictures/honda.jpg);
 
-<h1> The Life Of Marius</h1>
+  }
+
+</style>
+
+<h1 style="text-align: center;"> The Life Of Marius</h1>
 <br />
 <body>
-<h2> Det er heilt sant!</h2>
+<h2 style="text-align: center;"> Det er heilt sant!</h2>
 <br />
-<p> Yes! Fantastisk nyheit!</p>
+<p style="text-align: center;"> Yes! Fantastisk nyheit!</p>
 
-  <style>
-body {
-  background-image: url('honda.jpg');
-}
-</style>
-    
-<img class="logo" src="icons/logo.png">
+<img class="logo" src="Pictures/logo.png">
 
 <head>
     <title>Buttons Practice</title>
