--- a/index.html
+++ b/index.html
@@ -1,41 +1,38 @@
-<html>
-  
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>The Life Of Marius </title>
+    </head>
+
+ <body>
+
 <style>
   body {
 background-image: url(Pictures/honda.jpg);
-
   }
-
 </style>
 
 <h1 style="text-align: center;"> The Life Of Marius</h1>
 <br />
 <body>
 <h2 style="text-align: center;"> Det er heilt sant!</h2>
-<br />
 <p style="text-align: center;"> Yes! Fantastisk nyheit!</p>
 
-<img class="logo" src="Pictures/logo.png">
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 
-<head>
-    <title>Buttons Practice</title>
-    <link rel="stylesheet" href="styles/buttons.css">
-  </head>
-  <body>
-    <button class="subscribe-button">
-      SUBSCRIBE
-    </button>
 
-    <button class="join-button">
-      JOIN
-    </button>
-
-    <button class="tweet-button">
-      Tweet
-    </button>
+<ul>
+<li><button><a href="./index.html">Heim</a></button></li>
+<li><button><a href="./Meny/Meir.html">Meir</a></button></li>
+<li><button><a href="./Meny/Om.html">Om</a></button></li>
+</ul>
 
 </body>
 </html>
+
