--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <style>
   body {
 background-image: url(Pictures/honda.jpg);
-background-size: 100vw 100vh;
-background-repeat: no-repeat; 
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 </style>
 
