--- a/Meny/Prosjekt.html
+++ b/Meny/Prosjekt.html
@@ -21,7 +21,7 @@
     </nav>
      
     <section class="hero">
-      <h1>Om</h1> 
+      <h1>Prosjekter</h1> 
       <div class="hero-container">
         <div class="column-left">
           
@@ -38,3 +38,10 @@
     </section>
   </body>
 </html>
+
+
+
+
+
+
+
