--- a/Meny/Prosjekt.html
+++ b/Meny/Prosjekt.html
@@ -21,7 +21,12 @@
     </nav>
      
     <section class="hero">
-      <h1>Prosjekter</h1> 
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+    <h1 style="text-align: center;"> Prosjekter </h1>
       <div class="hero-container">
         <div class="column-left">
           
