--- a/Meny/Om.html
+++ b/Meny/Om.html
@@ -21,7 +21,12 @@
     </nav>
      
     <section class="hero">
-      <h1>Om</h1> 
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+      <h1 style="text-align: center;"> Om </h1> 
       <div class="hero-container">
         <div class="column-left">
           
