--- a/index.html
+++ b/index.html
@@ -1,58 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title> Testing Portfolio </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TLOM</title>
     <link rel="stylesheet" href="style.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
-
 <body>
- 
-    <header class="header">
-        <a href="#" class="logo">Marius</a>
-
-    <div class="dropdown">
-        <button class="dropbtn">Menu</button>
-        <div class="dropdown-content">
-            <a href="#">About</a>
-            <a href="#">Service</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Contact</a> 
-        </div>
-    </div>  
-
-     
+    <div class="star"></div>
+    <header>
+        <div class="logo">Project TLOM</div>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#project">Project</a>
+            <a href="#about">About</a>
+            <div class="nav-item">
+                <button id="toggle-button">Dark/Light</button>
+            </div>
+        </nav>
     </header>
 
-    <section class="home">
-        <div class="home-content">
-            <h1>Hi, I'm Marius</h1>
-            <h3>Testing Website</h3>
-            <p>Bro ipsum dolor sit amet tele hardtail grom, frozen chicken heads line trail swag wheelie single track japan air. Gapers nose grom twister flowy cornice giblets bowl endo free ride bonk moguls presta backside epic. Trucks sucker hole taco glove, acro schraeder mute saddle grab death cookies. Core shot gondy north shore pillow popping flowy cork ride grind euro first tracks hammerhead ollie. Flow bomb back country first tracks grip tape berm. Over the bars afterbang chowder japan air gaper, gnar euro gapers schwag. Gnar death cookies beater epic.</p>
-        <div class="btn-box">
-            <a href="#">Funny</a>
-            <a href="#">Cool</a>
+    <div class="content-container">
+        <div class="left-container">
+            <div class="image-container">
+                <img src="C:/Users/MariusHauge/OneDrive - Advania/Dokumenter/Marius Hauge/TheLifeOfMarius/TLOM/Bilder/lulu.jpg" alt="Nydlig Pus" class="my-image">
+                <div class="image-text">This is my Cat LULU</div>
+            </div>
         </div>
-       </div>
+
+        <div class="right-container">
+            <div class="image-container">
+                <img src="C:/Users/MariusHauge/OneDrive - Advania/Dokumenter/Marius Hauge/TheLifeOfMarius/TLOM/Bilder/Melvin.jpg" alt="Nydlig Pus 2" class="top-right-image">
+                <div class="image-text">This is my other Cat MELVIN</div>
+            </div>
+        </div>
+
+        <div class="text-box">
+            <p><em>Our doubts are traitors, and make us lose the good we oft might win by fearing to attempt.</em><br><br><strong>-William Shakespeare</strong></p>
+        </div>
     </div>
-       <div class="home-sci">
-        <a href="#"><i class='bx bxl-facebook'></i></a>
-        <a href="#"><i class='bx bxl-twitter' ></i></a>
-        <a href="#"><i class='bx bxl-instagram' ></i></a>
-       </div>    
-       
-       <span class="home-imgHover"></span>
-    </section>
 
-   
-
+    <script src="script.js"></script>
 </body>
-
-</head>
-
 </html>
