--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="icon"  type="image/x-icon" href="./Bilder/Logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TLOM</title>
     <link rel="stylesheet" href="style.css">
@@ -23,14 +24,14 @@
     <div class="content-container">
         <div class="left-container">
             <div class="image-container">
-                <img src="C:/Users/MariusHauge/OneDrive - Advania/Dokumenter/Marius Hauge/TheLifeOfMarius/TLOM/Bilder/lulu.jpg" alt="Nydlig Pus" class="my-image">
+                <img src="./Bilder/Lulu.jpg" alt="Nydlig Pus" class="my-image">
                 <div class="image-text">This is my Cat LULU</div>
             </div>
         </div>
 
         <div class="right-container">
             <div class="image-container">
-                <img src="C:/Users/MariusHauge/OneDrive - Advania/Dokumenter/Marius Hauge/TheLifeOfMarius/TLOM/Bilder/Melvin.jpg" alt="Nydlig Pus 2" class="top-right-image">
+                <img src="./Bilder/Melvin.jpg" alt="Nydlig Pus 2" class="top-right-image">
                 <div class="image-text">This is my other Cat MELVIN</div>
             </div>
         </div>
@@ -38,6 +39,12 @@
         <div class="text-box">
             <p><em>Our doubts are traitors, and make us lose the good we oft might win by fearing to attempt.</em><br><br><strong>-William Shakespeare</strong></p>
         </div>
+    </div>
+
+    <div class="smoke-container">
+        <div class="smoke"></div>
+        <div class="smoke"></div>
+        <div class="smoke"></div>
     </div>
 
     <script src="script.js"></script>
